--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,10 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="refresh_schedule">Refresh Schedule</string>
-
+    <string name="note_content">Note Content</string>
+    <string name="my_notes">My Notes</string>
+    <string name="note_created_on">Created On</string>
+    <string name="title_Note">Note Title</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
