--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,13 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
+    <string name="announcements_title">My Announcements</string>
+    <string name="announcement_title_label">Title:</string>
+    <string name="announcement_author_label">Author:</string>
+    <string name="announcement_class_label">Class:</string>
+    <string name="announcement_date_label">Date:</string>
+    <string name="announcement_content_label">Content:</string>
+    <string name="loading_announcements_message">Loading announcements...</string>
+
+
 </resources>
